Remove map Add contact information

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -214,34 +214,31 @@
 	<section class="contact" id="contact">
 		<div class="container topCon">
 			<div class="heading">
-				<h2>Get In Touch</h2>
-				<p>Please feel free if you would like to have a chat.</p>
+				<h2>Contate-me</h2>
+				<p>Sinta-se a vontade para entrar em contato.</p>
 			</div>
-		</div>
-		<div class="row mapArea">
-			<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/?ie=UTF8&amp;ll=-37.817682,144.957595&amp;spn=0.01134,0.026157&amp;t=m&amp;z=16&amp;output=embed"></iframe>
 		</div>
 	</section>
 	<section class="contactDetails">
 		<div class="container">
 			<!--contact info start-->
 			<div class="col-xs-12 col-sm-3 col-md-4 col-lg-4">
-				<h4>Contact details</h4>
-				<p> <i class="fa fa-map-marker fa-lg"></i> Collins Street West Victoria 8007 Australia</p>
-				<p> <i class="fa fa-mobile fa-lg"></i> +1800 1234 56789</p>
-				<p> <i class="fa fa-envelope-o "></i> <a href="mailto:support@websitename.com">support@websitename.com</a></p>
-				<p> <i class="fa fa-link "></i> <a href="www.websitename.com">www.websitename.com</a></p>
+				<h4>Informações</h4>
+				<p> <i class="fa fa-map-marker fa-lg"></i> Maceió / AL - Brasil</p>
+				<p> <i class="fa fa-mobile fa-lg"></i> +55 (82) 9987-2799</p>
+				<p> <i class="fa fa-envelope-o "></i> <a href="mailto:gustavocunha&#64;gmail&#46;com">gustavocunha&#64;gmail&#46;com</a></p>
+				<p> <i class="fa fa-link "></i> <a href="http://www.gmmcal.com.br">www.gmmcal.com.br</a></p>
 			</div>
 			<!--contact info end-->
 			<!--contact form start-->
 			<div class="col-xs-12 col-sm-9 col-md-8 col-lg-8 conForm">
-				<h4>Shoot a message!</h4>
+				<h4>Envie uma mensagem!</h4>
 				<div id="message"></div>
 				<form method="post" action="php/contact.php" name="cform" id="cform">
-					<input name="name" id="name" type="text" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" placeholder="Your name..." >
-					<input name="email" id="email" type="email" class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 noMarr" placeholder="Your email..." >
-					<textarea name="comments" id="comments" cols="" rows="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Your message..."></textarea>
-					<input type="submit" id="submit" name="send" class="submitBnt" value="Send message">
+					<input name="name" id="name" type="text" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" placeholder="Nome..." >
+					<input name="email" id="email" type="email" class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 noMarr" placeholder="E-mail..." >
+					<textarea name="comments" id="comments" cols="" rows="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Mensagem..."></textarea>
+					<input type="submit" id="submit" name="send" class="submitBnt" value="Enviar">
 					<div id="simple-msg"></div>
 				</form>
 			</div>
