--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,17 +2,17 @@
 	<section class="aboutme" id="aboutme">
 		<div class="container">
 			<div class="heading">
-				<h2>About me</h2>
-				<p>A small introduction about my self</p>
+				<h2>Sobre mim</h2>
+				<p></p>
 			</div>
 			<div class="row">
 				<div class=" col-xs-12 col-sm-12 col-md-7 col-lg-7">
-					<h3>Jonathan Doe</h3>
-					<h4 class="subHeading">Webdesigner & Web Developer from Melbourne</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.  cillum dolore eu fugiat nulla pariatur. olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-					<p>nulla pariatur.uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-					<a href="#" class="bntDownload">Download Printable Resume</a> </div>
-				<div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 proPic"> <img src="http://placehold.it/295x295&text=image1" alt="" class="img-circle topmar"> </div>
+					<h3>Gustavo Cunha</h3>
+					<h4 class="subHeading">Engenheiro de Software em Maceió / AL - Brasil</h4>
+					<p>Gosto de trabalhar em grupo, sou movido a desafios. Sou perfeccionista, e sei que isso nem sempre é bom. Gosto de pesquisar coisas novas, propor soluções, resolver problemas, principalmente os mais difíceis.</p>
+					<%=link_to "Download em PDF", "gmmcal.pdf", class: "bntDownload", target: :_blank%>
+				</div>
+				<div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 proPic"> <%= image_tag "website/gmmcal.jpg", alt: "Gustavo Cunha", class: "img-circle topmar" %> </div>
 			</div>
 		</div>
 	</section>
