--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -29,7 +29,7 @@
 			<div class="banner row" id="banner">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
 					<!--background slide show start-->
-					<div class="bannerPart"> <img src="http://placehold.it/1600x900&text=image1" alt="" class="bannerImg"> </div>
+					<div class="bannerPart"> <%=image_tag "website/banner.jpg", class: "bannerImg"%> </div>
 					<!--background slide show end-->
 				</div>
 			</div>
