--- a/app/assets/stylesheets/setup.css.scss
+++ b/app/assets/stylesheets/setup.css.scss
@@ -37,12 +37,13 @@ h1{
 }
 h2{
 	font-family: 'Open Sans', sans-serif;
-	font-size:36px;
+	font-size:30px;
 	line-height:38px;
 	padding-bottom:0px;
 	font-weight:300;
 	text-transform:uppercase;
 	margin:0px;
+	letter-spacing: 12px;
 }
 h3{
 	font-family: 'Open Sans', sans-serif;
