--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -35,7 +35,7 @@
 			</div>
 			<!--banner end-->
 			<div class="bannerText container">
-				<h1>Eu sou Gustavo Cunha</h1>
+				<h1>Gustavo Cunha</h1>
 				<h2>Desenvolvimento Web, Mobile, consultoria em Engenharia de Software</h2>
 			</div>
 			<!--menu start-->
