Change image css

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,10 +9,11 @@
 				<div class=" col-xs-12 col-sm-12 col-md-7 col-lg-7">
 					<h3>Gustavo Cunha</h3>
 					<h4 class="subHeading">Engenheiro de Software em Maceió / AL - Brasil</h4>
+					<p>Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalha com desenvolvimento web desde 2003 e atualmente é Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, é certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012.</p>
 					<p>Gosto de trabalhar em grupo, sou movido a desafios. Sou perfeccionista, e sei que isso nem sempre é bom. Gosto de pesquisar coisas novas, propor soluções, resolver problemas, principalmente os mais difíceis.</p>
 					<%=link_to "Download em PDF", "gmmcal.pdf", class: "bntDownload", target: :_blank%>
 				</div>
-				<div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 proPic"> <%= image_tag "website/gmmcal.jpg", alt: "Gustavo Cunha", class: "img-circle topmar" %> </div>
+				<div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 proPic"> <%= image_tag "website/gmmcal.png", alt: "Gustavo Cunha", class: "topmar" %> </div>
 			</div>
 		</div>
 	</section>
