--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -42,6 +42,10 @@
 	.proPic{
 		text-align:center;
 	}
+
+	.topmar{
+		margin-top: 20px;
+	}
 }
 
 
@@ -66,6 +70,9 @@
 		padding-left: 17px;
 	}
 
+	.topmar{
+		margin-top: 20px;
+	}
 }
 
 
@@ -91,6 +98,9 @@
 
 	}
 
+	.topmar{
+		margin-top: 20px;
+	}
 }
 
 
@@ -118,6 +128,10 @@
 	}
 	ul.navbar-nav li a{
 		display:block;
+	}
+
+	.topmar{
+		margin-top: 20px;
 	}
 }
 
@@ -147,6 +161,10 @@
 		line-height:24px;
 		padding-top: 10px;
 	}
+
+	.topmar{
+		margin-top: 20px;
+	}
 }
 
 
@@ -155,6 +173,10 @@
 		line-height: 17px;
 		padding-top:11px;
 		padding-bottom:11px;
+	}
+
+	.topmar{
+		margin-top: 20px;
 	}
 }
 
@@ -202,5 +224,9 @@
 		left:0px;
 		top:0px;
 
+	}
+
+	.topmar{
+		margin-top: 20px;
 	}
 }
