--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,44 +22,44 @@
 	<section class="technical" id="technical">
 		<div class="container">
 			<div class="heading">
-				<h2>Technical Skills</h2>
-				<p>I can say i’m quite good at</p>
+				<h2>Habilidades Técnicas</h2>
+				<p>Eu sei onde estou me metendo nesses assuntos</p>
 			</div>
 			<div class="row">
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="90"> <span class="percent"></span> </span>
-						<h4>Photoshop</h4>
-						<p>Donec accumsan ligula vitae mag na curabitur id</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="85"> <span class="percent"></span> </span>
+						<h4>PHP</h4>
+						<p>11 anos de experiência</p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
 					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="80"> <span class="percent"></span> </span>
-						<h4>Illustrator</h4>
-						<p>Donec accumsan ligula vitae mag na curabitur id</p>
+						<h4>Ruby on Rails</h4>
+						<p>Paixão a primeira linha de código</p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="80"> <span class="percent"></span> </span>
-						<h4>Flash</h4>
-						<p>Donec accumsan ligula vitae mag na curabitur id</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="70"> <span class="percent"></span> </span>
+						<h4>Objective-C</h4>
+						<p>Desafios a frente</p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
 					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="75"> <span class="percent"></span> </span>
-						<h4>HTML5 / CSS3</h4>
-						<p>Donec accumsan ligula vitae mag na curabitur id</p>
+						<h4>MySQL</h4>
+						<p>select * from table...</p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="60"> <span class="percent"></span> </span>
-						<h4>jQuery</h4>
-						<p>Donec accumsan ligula vitae mag na curabitur id</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="40"> <span class="percent"></span> </span>
+						<h4>PostgreSQL</h4>
+						<p>Uma nova abordagem....</p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="65"> <span class="percent"></span> </span>
-						<h4>PHP / MySQL</h4>
-						<p>Donec accumsan ligula vitae mag na curabitur id</p>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="50"> <span class="percent"></span> </span>
+						<h4>HTML / CSS</h4>
+						<p>Aprendendo diáriamente</p>
 					</div>
 				</div>
 			</div>
