--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,17 +23,17 @@
 		<div class="container">
 			<div class="heading">
 				<h2>Habilidades Técnicas</h2>
-				<p>Eu sei onde estou me metendo nesses assuntos</p>
+				<p>Eu sei no que eu sou bom, mas estou sempre aprendendo</p>
 			</div>
 			<div class="row">
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="85"> <span class="percent"></span> </span>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="90"> <span class="percent"></span> </span>
 						<h4>PHP</h4>
 						<p>11 anos de experiência</p>
 					</div>
 				</div>
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="80"> <span class="percent"></span> </span>
+					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="85"> <span class="percent"></span> </span>
 						<h4>Ruby on Rails</h4>
 						<p>Paixão a primeira linha de código</p>
 					</div>
