--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -70,48 +70,58 @@
 	<section class="exprience" id="exprience">
 		<div class="container">
 			<div class="heading">
-				<h2>Work Experience</h2>
-				<p>My previous associations</p>
+				<h2>Experiência de trabalho</h2>
+				<p>Empresas por onde andei</p>
 			</div>
 			<div class="row workDetails">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-					<div class="workYear">Mar,2011<br>
-						Present</div>
+					<div class="workYear">Set / 2012<br>Atualmente</div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4>UIzards</h4>
-						<h5>Senior UX Designer</h5>
-						<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+						<h4>Quimbik, Inc - São Francisco - CA - EUA</h4>
+						<h5>Engenheiro de Software</h5>
+						<p>Engenheiro de Software responsável por desenvolvimento de sistemas na empresa, em sistema de Home Office, usando Ruby on Rails, MySQL e Objective-C (iOS). Trabalho usando ferramentas para a integração e funcionamento das rotinas de trabalho, como o Redmine e Pivotal para gerenciamento de tickets, Skype e Slack para reuniões e conversas, Harverst para contabilização de horas, Git para versionamento de código, entre outras ferramentas.</p>
 					</div>
 				</div>
 			</div>
 			<div class="row workDetails">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-					<div class="workYear">Mar,2011<br>
-						Present</div>
+					<div class="workYear">Jun / 2007<br>Set / 2012</div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4>Lexind</h4>
-						<h5>Visual / UI Designer</h5>
-						<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+						<h4>id5 Solução Web - Maceió - AL - Brasil</h4>
+						<h5>Programador / Analista de Sistemas</h5>
+						<p>Responsável pela análise e desenvolvimento de sistemas da empresa. Comecei fazendo manutenções e desenvolvimento em um sistema de apoio a decisões em ASP / Access. Depois, passei a dar manutenção e desenvolver no sistema de gerenciamento de conteúdos proprietário da empresa em ASP / SQL Server. Em 2010, a empresa trocou o sistema proprietário pelo Wordpress, e voltei a desenvolver em PHP / MySQL. Desde então, sou responsável por quase toda a análise e todo o desenvolvimento de sistemas.</p>
 					</div>
 				</div>
 			</div>
 			<div class="row workDetails">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-					<div class="workYear">Mar,2011<br>
-						Present</div>
+					<div class="workYear">Mar / 2006<br>Mar / 2007</div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4>Matrix Media</h4>
-						<h5>Visual / UI Designer</h5>
-						<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+						<h4>Correios - Maceió - AL - Brasil</h4>
+						<h5>Estágio em Desenvolvimento</h5>
+						<p>Responsável pela manutenção da Intranet da Diretoria Regional de Alagoas e desenvolvimento de sistemas demandados pelos setores, sob a supervisão dos analistas de sistemas da empresa. Todos os sistemas eram desenvolvidos em Coldfusion, linguagem proprietária da Macromedia (comprada posteiormente pela Adobe).</p>
+					</div>
+				</div>
+			</div>
+			<div class="row workDetails">
+				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+					<div class="workYear">Mar / 2003<br>Set / 2004</div>
+				</div>
+				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+					<div class="arrowpart"></div>
+					<div class="exCon">
+						<h4>Secretaria de Fazenda de Alagoas / SEFAZ - Maceió - AL - Brasil</h4>
+						<h5>Estágio em suporte ao usuário</h5>
+						<p>Estágio dando suporte a usuários em um setor da SEFAZ / AL, ajudando a ensinar os funcionários a usar o computador e seus recursos, agilizar o suporte, entre outros. Também trabalhei alimentando um sistema de produtividade desenvolvido pela equipe de TI da SEFAZ. No fim do estágio, cheguei a desenvolver um pe- queno sistema em PHP de tabulação de um pesquisa interna para o supervisor do setor.</p>
 					</div>
 				</div>
 			</div>
