--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -75,6 +75,19 @@
 			</div>
 			<div class="row workDetails">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+					<div class="workYear">Abr / 2014<br>Atualmente</div>
+				</div>
+				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+					<div class="arrowpart"></div>
+					<div class="exCon">
+						<h4>Alagoas Dev Day - Maceió - AL - Brasil</h4>
+						<h5>Co-Fundador / Organizador</h5>
+						<p>Evento anual de desenvolvimento criado para fomentar e fortalecer a cultura de programação em Alagoas e região, trazendo profissionais de renome no estado e no país para compartilhar experiências e difundir conhecimento.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row workDetails">
+				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear">Set / 2012<br>Atualmente</div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
