--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -75,19 +75,6 @@
 			</div>
 			<div class="row workDetails">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-					<div class="workYear">Abr / 2014<br>Atualmente</div>
-				</div>
-				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
-					<div class="arrowpart"></div>
-					<div class="exCon">
-						<h4>Alagoas Dev Day - Maceió - AL - Brasil</h4>
-						<h5>Co-Fundador / Organizador</h5>
-						<p>Evento anual de desenvolvimento criado para fomentar e fortalecer a cultura de programação em Alagoas e região, trazendo profissionais de renome no estado e no país para compartilhar experiências e difundir conhecimento.</p>
-					</div>
-				</div>
-			</div>
-			<div class="row workDetails">
-				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear">Set / 2012<br>Atualmente</div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
@@ -96,6 +83,32 @@
 						<h4>Quimbik, Inc - São Francisco - CA - EUA</h4>
 						<h5>Engenheiro de Software</h5>
 						<p>Engenheiro de Software responsável por desenvolvimento de sistemas na empresa, em sistema de Home Office, usando Ruby on Rails, MySQL e Objective-C (iOS). Trabalho usando ferramentas para a integração e funcionamento das rotinas de trabalho, como o Redmine e Pivotal para gerenciamento de tickets, Skype e Slack para reuniões e conversas, Harverst para contabilização de horas, Git para versionamento de código, entre outras ferramentas.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row workDetails">
+				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+					<div class="workYear">Out / 2014<br>Atualmente</div>
+				</div>
+				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+					<div class="arrowpart"></div>
+					<div class="exCon">
+						<h4>Abound - Maceió - AL - Brasil</h4>
+						<h5>Co-Fundador / Editor</h5>
+						<p>Blog com conteúdo para desenvolvedores feito em Wordpress.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row workDetails">
+				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+					<div class="workYear">Abr / 2014<br>Atualmente</div>
+				</div>
+				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+					<div class="arrowpart"></div>
+					<div class="exCon">
+						<h4>Alagoas Dev Day - Maceió - AL - Brasil</h4>
+						<h5>Co-Fundador / Organizador</h5>
+						<p>Evento anual de desenvolvimento criado para fomentar e fortalecer a cultura de programação em Alagoas e região, trazendo profissionais de renome no estado e no país para compartilhar experiências e difundir conhecimento.</p>
 					</div>
 				</div>
 			</div>
