Update contact information

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -416,11 +416,14 @@
 		<div class="container">
 			<!--contact info start-->
 			<div class="col-xs-12 col-sm-3 col-md-4 col-lg-4">
-				<h4>Informações</h4>
+				<h4>Contatos</h4>
 				<p> <i class="fa fa-map-marker fa-lg"></i> Maceió / AL - Brasil</p>
 				<p> <i class="fa fa-mobile fa-lg"></i> +55 (82) 9987-2799</p>
 				<p> <i class="fa fa-envelope-o "></i> <a href="mailto:gustavocunha&#64;gmail&#46;com">gustavocunha&#64;gmail&#46;com</a></p>
-				<p> <i class="fa fa-link "></i> <a href="http://www.gmmcal.com.br">www.gmmcal.com.br</a></p>
+				<p> <i class="fa fa-github"></i> <a href="http://github.com/gmmcal" target="_blank">gmmcal</a></p>
+				<p> <i class="fa fa-linkedin"></i> <a href="http://linkedin.com/in/gmmcal" target="_blank">Gustavo Cunha</a></p>
+				<p> <i class="fa fa-twitter"></i> <a href="http://twitter.com/gmmcal" target="_blank">@gmmcal</a></p>
+				<p> <i class="fa fa-facebook"></i> <a href="http://fb.com/gmmcal" target="_blank">Gustavo Cunha</a></p>
 			</div>
 			<!--contact info end-->
 			<!--contact form start-->
