--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -75,10 +75,9 @@
 		<section class="footer" id="footer">
 			<div class="container">
 				<ul>
+					<li><a href="https://github.com/gmmcal" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
+					<li><a href="https://linkedin.com/in/gmmcal" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
 					<li><a href="https://twitter.com/gmmcal" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
-					<li><a href="https://www.facebook.com/gmmcal" target="_blank"><i class="fa fa-facebook fa-2x"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/gmmcal" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
-					<li><a href="http://www.pinterest.com/gmmcal/" target="_blank"><i class="fa fa-pinterest fa-2x"></i></a></li>
 				</ul>
 			</div>
 		</section>
