--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -158,45 +158,33 @@
 	<section class="education" id="education">
 		<div class="container">
 			<div class="heading">
-				<h2>Education & Diplomas</h2>
-				<p>What I have done in my academic career</p>
+				<h2>Educação e Diplomas</h2>
+				<p>O que eu fiz na minha carreira acadêmica</p>
 			</div>
+
 			<div class="row workDetails">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-					<div class="workYear">Mar,2010</div>
+					<div class="workYear">Nov / 2012</div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4>Master Degree of Design</h4>
-						<h5>University of Design</h5>
-						<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+						<h4>Pós-gradução em Engenharia de Software</h4>
+						<h5>Centro Universitário CESMAC</h5>
+						<p>Pós-graduação em Engenharia de Software pelo Centro Universitário CESMAC, focando em padrões de projetos.</p>
 					</div>
 				</div>
 			</div>
 			<div class="row workDetails">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-					<div class="workYear">Sept, 2007</div>
+					<div class="workYear">Mai / 2008</div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4>Bachelor of Arts</h4>
-						<h5>University of Design</h5>
-						<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
-					</div>
-				</div>
-			</div>
-			<div class="row workDetails">
-				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-					<div class="workYear">Feb, 2005</div>
-				</div>
-				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
-					<div class="arrowpart"></div>
-					<div class="exCon">
-						<h4>Master Degree of Design</h4>
-						<h5>University of Design</h5>
-						<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+						<h4>Bacharel em Ciência da Computação</h4>
+						<h5>Universidade Federal de Alagoas</h5>
+						<p>Fraduação em Ciência da Computação pela Universidade Federal de Alagoas, iniciando o curso em Junho / 2002 e concluindo em Maio / 2008.</p>
 					</div>
 				</div>
 			</div>
