Add Open Graph tags

--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -20,6 +20,14 @@
 	<!--[if lt IE 9]>
 		<%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track' => true %>
 	<![endif]-->
+	<!-- Open Graph Tags-->
+	<meta property="og:title" content="Gustavo Cunha - Software Engineer" />
+	<meta property="og:site_name" content="Gustavo Cunha"/>
+	<meta property="og:image" content="<%=asset_url('website/avatar.jpg')%>"/>
+	<meta property="og:url" content="<%=root_url%>" />
+	<meta property="og:description" content="Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalha com desenvolvimento web desde 2003 e atualmente é Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, é certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012." />
+	<meta property="og:type" content="website" />
+	<meta property="og:locale" content="pt_BR" />
 </head>
 <body>
 	<!--wrapper start-->
