--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
 				<div class=" col-xs-12 col-sm-12 col-md-7 col-lg-7">
 					<h3>Gustavo Cunha</h3>
 					<h4 class="subHeading">Engenheiro de Software em Maceió / AL - Brasil</h4>
-					<p>Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalha com desenvolvimento web desde 2003 e atualmente é Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, é certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012.</p>
+					<p>Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalho com desenvolvimento web desde 2003 e atualmente sou Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, sou certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012.</p>
 					<p>Gosto de trabalhar em grupo, sou movido a desafios. Sou perfeccionista, e sei que isso nem sempre é bom. Gosto de pesquisar coisas novas, propor soluções, resolver problemas, principalmente os mais difíceis.</p>
 					<%=link_to "Download em PDF", "gmmcal.pdf", class: "bntDownload", target: :_blank%>
 				</div>
@@ -59,7 +59,7 @@
 				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
 					<div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="50"> <span class="percent"></span> </span>
 						<h4>HTML / CSS</h4>
-						<p>Aprendendo diáriamente</p>
+						<p>Aprendendo diariamente</p>
 					</div>
 				</div>
 			</div>
@@ -121,7 +121,7 @@
 					<div class="exCon">
 						<h4>id5 Solução Web - Maceió - AL - Brasil</h4>
 						<h5>Programador / Analista de Sistemas</h5>
-						<p>Responsável pela análise e desenvolvimento de sistemas da empresa. Comecei fazendo manutenções e desenvolvimento em um sistema de apoio a decisões em ASP / Access. Depois, passei a dar manutenção e desenvolver no sistema de gerenciamento de conteúdos proprietário da empresa em ASP / SQL Server. Em 2010, a empresa trocou o sistema proprietário pelo Wordpress, e voltei a desenvolver em PHP / MySQL. Desde então, sou responsável por quase toda a análise e todo o desenvolvimento de sistemas.</p>
+						<p>Responsável pela análise e desenvolvimento de sistemas da empresa. Comecei fazendo manutenções e desenvolvimento em um sistema de apoio a decisões em ASP / Access. Depois, passei a dar manutenção e desenvolver no sistema de gerenciamento de conteúdos proprietário da empresa em ASP / SQL Server. Em 2010, a empresa trocou o sistema proprietário pelo Wordpress, e voltei a desenvolver em PHP / MySQL. Desde então, fui responsável por quase toda a análise e todo o desenvolvimento de sistemas.</p>
 					</div>
 				</div>
 			</div>
@@ -134,7 +134,7 @@
 					<div class="exCon">
 						<h4>Correios - Maceió - AL - Brasil</h4>
 						<h5>Estágio em Desenvolvimento</h5>
-						<p>Responsável pela manutenção da Intranet da Diretoria Regional de Alagoas e desenvolvimento de sistemas demandados pelos setores, sob a supervisão dos analistas de sistemas da empresa. Todos os sistemas eram desenvolvidos em Coldfusion, linguagem proprietária da Macromedia (comprada posteiormente pela Adobe).</p>
+						<p>Responsável pela manutenção da Intranet da Diretoria Regional de Alagoas e desenvolvimento de sistemas demandados pelos setores, sob a supervisão dos analistas de sistemas da empresa. Todos os sistemas eram desenvolvidos em Coldfusion, linguagem proprietária da Macromedia (comprada posteriormente pela Adobe).</p>
 					</div>
 				</div>
 			</div>
@@ -147,7 +147,7 @@
 					<div class="exCon">
 						<h4>Secretaria de Fazenda de Alagoas / SEFAZ - Maceió - AL - Brasil</h4>
 						<h5>Estágio em suporte ao usuário</h5>
-						<p>Estágio dando suporte a usuários em um setor da SEFAZ / AL, ajudando a ensinar os funcionários a usar o computador e seus recursos, agilizar o suporte, entre outros. Também trabalhei alimentando um sistema de produtividade desenvolvido pela equipe de TI da SEFAZ. No fim do estágio, cheguei a desenvolver um pe- queno sistema em PHP de tabulação de um pesquisa interna para o supervisor do setor.</p>
+						<p>Estágio dando suporte a usuários em um setor da SEFAZ / AL, ajudando a ensinar os funcionários a usar o computador e seus recursos, agilizar o suporte, entre outros. Também trabalhei alimentando um sistema de produtividade desenvolvido pela equipe de TI da SEFAZ. No fim do estágio, cheguei a desenvolver um pequeno sistema em PHP de tabulação de um pesquisa interna para o supervisor do setor.</p>
 					</div>
 				</div>
 			</div>
@@ -184,7 +184,7 @@
 					<div class="exCon">
 						<h4>Bacharel em Ciência da Computação</h4>
 						<h5>Universidade Federal de Alagoas</h5>
-						<p>Fraduação em Ciência da Computação pela Universidade Federal de Alagoas, iniciando o curso em Junho / 2002 e concluindo em Maio / 2008.</p>
+						<p>Graduação em Ciência da Computação pela Universidade Federal de Alagoas, iniciando o curso em Junho / 2002 e concluindo em Maio / 2008.</p>
 					</div>
 				</div>
 			</div>
