--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -8,13 +8,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Gustavo Cunha - Software Engineer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalha com desenvolvimento web desde 2003 e atualmente é Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, é certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012." />
+	<meta name="description" content="Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalho com desenvolvimento web desde 2003 e atualmente sou Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, sou certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012." />
 	<!-- Open Graph Tags -->
 	<meta property="og:title" content="Gustavo Cunha - Software Engineer" />
 	<meta property="og:site_name" content="Gustavo Cunha"/>
 	<meta property="og:image" content="<%=asset_url('website/avatar.jpg')%>"/>
 	<meta property="og:url" content="<%=root_url%>" />
-	<meta property="og:description" content="Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalha com desenvolvimento web desde 2003 e atualmente é Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, é certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012." />
+	<meta property="og:description" content="Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalho com desenvolvimento web desde 2003 e atualmente sou Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, sou certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012." />
 	<meta property="og:type" content="website" />
 	<meta property="og:locale" content="pt_BR" />
 	<!--google font style-->
