--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -32,7 +32,7 @@
 </head>
 <body>
 	<!--wrapper start-->
-	<div class="wrapper" id="wrapper">
+	<div class="wrapper" id="wrapper" itemscope itemtype="http://schema.org/Person">
 		<header>
 			<!--banner start-->
 			<div class="banner row" id="banner">
