--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -20,7 +20,7 @@
 	<!--google font style-->
 	<!--font-family: 'Open Sans', sans-serif;-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
-	<%= stylesheet_link_tag 'website', media: 'all', 'data-turbolinks-track' => true %>
+	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
 	<%= javascript_include_tag 'modernizr', 'data-turbolinks-track' => true %>
 
 	<noscript>
@@ -93,7 +93,7 @@
 		<!--footer end-->
 	</div>
 	<!--wrapper end-->
-	<%= javascript_include_tag 'custom', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
