--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -44,8 +44,8 @@
 			</div>
 			<!--banner end-->
 			<div class="bannerText container">
-				<h1>Gustavo Cunha</h1>
-				<h2>Desenvolvimento Web, Mobile, consultoria em Engenharia de Software</h2>
+				<h1><%=t(:name, scope: [:template])%></h1>
+				<h2><%=t(:title, scope: [:template])%></h2>
 			</div>
 			<!--menu start-->
 			<div class="menu">
@@ -60,14 +60,14 @@
 									</div>
 									<div class="navbar-collapse collapse">
 										<ul class="nav navbar-nav">
-											<li class="menuItem active"><a href="#wrapper">Home</a></li>
-											<li class="menuItem"><a href="#aboutme">Sobre</a></li>
-											<li class="menuItem"><a href="#technical">Habilidades</a></li>
-											<li class="menuItem"><a href="#exprience">Experiência</a></li>
-											<li class="menuItem"><a href="#education">Educação</a></li>
-											<li class="menuItem"><a href="#protfolio">Portfolio</a></li>
-											<li class="menuItem"><a href="#contact">Contato</a></li>
-											<li class="menuItem"><a href="#footer">Social</a></li>
+											<li class="menuItem active"><a href="#wrapper"><%=t(:home, scope: [:template, :menu])%></a></li>
+											<li class="menuItem"><a href="#aboutme"><%=t(:about, scope: [:template, :menu])%></a></li>
+											<li class="menuItem"><a href="#technical"><%=t(:skills, scope: [:template, :menu])%></a></li>
+											<li class="menuItem"><a href="#exprience"><%=t(:experience, scope: [:template, :menu])%></a></li>
+											<li class="menuItem"><a href="#education"><%=t(:education, scope: [:template, :menu])%></a></li>
+											<li class="menuItem"><a href="#protfolio"><%=t(:portfolio, scope: [:template, :menu])%></a></li>
+											<li class="menuItem"><a href="#contact"><%=t(:contact, scope: [:template, :menu])%></a></li>
+											<li class="menuItem"><a href="#footer"><%=t(:social, scope: [:template, :menu])%></a></li>
 										</ul>
 									</div>
 								</div>
